This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
3/6/23: CHANGED SetupFullMontage TO TAKE AN OVERLAP FACTOR BEFORE THE
FILENAME.

3/6/23: Added script command to set the grid limits for a full montage.

3/6/23: Stage restoring after movements in eucentricity will now restore after
movements in Z, not just tilts.

3/2/23: Added script command to set option to redo montage cross-correlations.

3/1/23: With SkipAstigAdjustmentForIS set to -1, only astigmatism will be
measured in the coma vs IS calibration and adjusted for in multishot etc.

3/1/23: Added script command to skip Z move in next Realign to Item.

3/1/23: A dashed red rectangle will be drawn when an image extends beyond
property-based stage limits.

3/1/23: Fixed ReportApertureSize to assign to reported value and variable.

2/26/23: SEM_4-1-0-beta13
2/25/23: Fixed uninitialized variable that can cause incorrect display of
multishot cross patterns until acquire has been run.

2/25/23: Fixed numbering of holes in frame filenames with multishot cross
pattern (In 4.0).

2/24/23: Stated in help that aperture size could not be changed for FEI scopes
running under Windows 7, only insert/retract works.  Also changed method of
finding combo boxes to work for all boxes on Windows 7.

2/23/23: Fixed IStoStageMatrix and StageTpoISMatrix commands (In 4.0).

2/21/23: Restored the status area text after running the script that runs when
the program is idle.

2/17/23: SEM_4-0-20
2/17/23: Fixed crash opening file when buffer control panel is hidden
(In 4.0).

2/14/23: Fixed stage coordinates saved when a new map is made from a hybrid
montage.

2/13/23: Fixed handling of python version number so 3.10+ works (In 4.0).

2/13/23: Fixed script toolbar buttons above 40 (In 4.0).
